a lot more stuff lol

--- a/platformio.ini
+++ b/platformio.ini
@@ -25,4 +25,8 @@ monitor_filters =
 	default
 	colorize
 	log2file
-lib_deps = adafruit/Adafruit NeoPixel@^1.12.3
+lib_deps = 
+	adafruit/Adafruit NeoPixel@^1.12.3
+	tzapu/WiFiManager@^2.0.17
+	links2004/WebSockets@^2.6.1
+	bblanchon/ArduinoJson@^7.2.1
